<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MyAppSettings">

    <ScrollView
        android:id="@+id/main_content"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="@dimen/margin"
        android:scrollbarStyle="insideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/activity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/timer"
                android:textColor="@color/white"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/activity_label"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/NumberOfProblems1"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"

                android:gravity="fill_vertical"
                android:text="@string/number_of_problems"
                android:textColor="@color/white"
                android:textSize="@dimen/quote"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/option_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch1" />

            <Button
                android:id="@+id/option_1"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/twenty"
                android:textColor="@color/white"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toStartOf="@+id/option_2"
                ads:layout_constraintHorizontal_chainStyle="spread_inside"
                ads:layout_constraintStart_toEndOf="@id/NumberOfProblems1"
                ads:layout_constraintTop_toBottomOf="@id/switch1"
                app:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/option_2"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/fifty"
                android:textColor="@color/white"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toStartOf="@id/option_3"
                ads:layout_constraintStart_toEndOf="@+id/option_1"
                ads:layout_constraintTop_toBottomOf="@id/switch1"
                app:backgroundTint="@color/purple_200" />

            <Button
                android:id="@+id/option_3"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/seventyFive"
                android:textColor="@color/white"
                android:textSize="@dimen/quote"
                ads:layout_constraintStart_toEndOf="@+id/option_2"
                ads:layout_constraintTop_toBottomOf="@id/switch1"
                app:backgroundTint="@color/purple_200"
                app:layout_constraintEnd_toStartOf="@id/option_4" />

            <Button
                android:id="@+id/option_4"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/hundred"
                android:textColor="@color/white"
                android:textSize="@dimen/quote"
                ads:layout_constraintStart_toEndOf="@+id/option_3"
                ads:layout_constraintTop_toBottomOf="@id/switch1"
                app:backgroundTint="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent" />




            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="20dp"
                ads:layout_constraintGuide_percent=".20" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="20dp"
                ads:layout_constraintGuide_percent=".60" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>