<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdditionModule2">

    <ScrollView
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scrollbarStyle="insideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/display_questions"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textColor="@color/pink"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toStartOf="@id/ScoreDisplay"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ScoreDisplay"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/score_display"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toStartOf="@id/Score"
                app:layout_constraintStart_toEndOf="@id/display_questions"
                ads:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Score"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toStartOf="@id/timer"
                app:layout_constraintStart_toEndOf="@id/ScoreDisplay"
                ads:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textColor="@color/pink"
                android:textSize="@dimen/body"
                app:layout_constrainedWidth="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/Score"
                ads:layout_constraintTop_toTopOf="parent" />




            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Score"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Score" />


            <TextView
                android:id="@+id/game_quote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/label2"
                android:textColor="@color/pink"
                android:textSize="@dimen/heading"
                app:layout_constraintTop_toBottomOf="@id/result"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/top_addend"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginTop="4dp"
                android:background="@color/pink"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end"
                app:layout_constraintStart_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/game_quote" />

            <TextView
                android:id="@+id/bottom_addend"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_alignEnd="@+id/game_quote"
                android:layout_alignRight="@+id/game_quote"
                android:layout_marginTop="4dp"
                android:background="@color/pink"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end"
                app:layout_constraintStart_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/top_addend" />

            <TextView
                android:id="@+id/operator_sign"
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:background="@color/light_gray"
                android:gravity="center"
                android:text="@string/addition"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/title"
                app:layout_constraintEnd_toStartOf="@id/bottom_addend"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/top_addend" />


            <TextView
                android:id="@+id/user_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginTop="4dp"
                android:background="@color/light_gray"
                android:gravity="center"
                android:hint="@string/answer"
                android:maxLength="3"
                android:textColor="@color/black"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/bottom_addend" />

            <Button
                android:id="@+id/key_1"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@+id/key_2"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/user_input"
                app:backgroundTint="#C84D0C" />

            <Button
                android:id="@+id/key_2"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="8dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@id/key_3"
                ads:layout_constraintStart_toEndOf="@+id/key_1"
                ads:layout_constraintTop_toBottomOf="@id/user_input" />

            <Button
                android:id="@+id/key_3"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="8dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintStart_toEndOf="@+id/key_2"
                ads:layout_constraintTop_toBottomOf="@id/user_input"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end" />

            <Button
                android:id="@+id/key_4"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="4dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@+id/key_5"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/key_1" />

            <Button
                android:id="@+id/key_5"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="4dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@id/key_6"
                ads:layout_constraintStart_toEndOf="@+id/key_4"
                app:layout_constraintTop_toBottomOf="@id/key_2" />

            <Button
                android:id="@+id/key_6"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="4dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintStart_toEndOf="@+id/key_5"
                ads:layout_constraintTop_toBottomOf="@id/key_3"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end" />

            <Button
                android:id="@+id/key_7"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="4dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@+id/key_8"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/key_4" />

            <Button
                android:id="@+id/key_8"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="4dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@id/key_9"
                ads:layout_constraintStart_toEndOf="@+id/key_7"
                app:layout_constraintTop_toBottomOf="@id/key_6" />

            <Button
                android:id="@+id/key_9"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:layout_marginTop="4dp"
                app:backgroundTint="#C84D0C"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintStart_toEndOf="@+id/key_8"
                ads:layout_constraintTop_toBottomOf="@id/key_6"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end" />

            <Button
                android:id="@+id/key_clear"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:gravity="center"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@+id/key_0"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/key_7"
                app:backgroundTint="@color/dark_green" />

            <Button
                android:id="@+id/key_0"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/heading"
                ads:layout_constraintEnd_toStartOf="@id/key_send"
                ads:layout_constraintStart_toEndOf="@+id/key_clear"
                app:backgroundTint="#C84D0C"
                app:layout_constraintTop_toBottomOf="@id/key_8" />

            <ImageButton
                android:id="@+id/key_send"
                android:layout_width="@dimen/keypad"
                android:layout_height="@dimen/keypad"
                android:gravity="center"
                ads:layout_constraintStart_toEndOf="@+id/key_0"
                ads:layout_constraintTop_toBottomOf="@id/key_9"
                app:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="@id/guideline_app_end"
                app:srcCompat="@drawable/ic_send"
                android:contentDescription="@string/submit" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="40dp"
                ads:layout_constraintGuide_percent=".20"   />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="40dp"
                ads:layout_constraintGuide_percent=".40"  />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_app_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="20dp"
                ads:layout_constraintGuide_percent=".10"  />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_app_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="20dp"
                ads:layout_constraintGuide_percent=".90" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
